...
    ) {
        Column(
            Modifier
                .fillMaxSize()
                .padding(16.dp)
        ) {
            Text("¿Qué ingredientes tienes hoy?", style = MaterialTheme.typography.titleLarge, color = Color(0xFFFF9000))
            Spacer(Modifier.height(12.dp))

            OutlinedTextField(
                value = searchText,
                onValueChange = { searchText = it },
                placeholder = { Text("Busca ingredientes...") },
...
                        navController.navigate("detalle/$id")
                },
                elevation = ButtonDefaults.buttonElevation(defaultElevation = 6.dp),
                colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFFF6B6B)),
                modifier = Modifier.padding(start = 8.dp)
            ) {
                Text("Ver receta", color = Color.White)
            }
        }
    }
}

@Composable
...
